<?xml version="1.0"?>
<package>
    <name>orne_maps</name>
    <version>0.1.0</version>
    <description>The orne_maps package</description>

    <maintainer email="d.maekawa@rapyuta-robotics.com">Daiki Maekawa</maintainer>
    <author email="d.maekawa@rapyuta-robotics.com">Daiki Maekawa</author>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
</package>
